# GraphicalBF

./: .1hi6cc65p9eqv3468545727~  .1qvnyrw30unlf1800429448~  .1swar29xznmvk2892381092~  .1t0mv8fxm6jri3424055451~  .20pz8wmcbsfj51224244546~  .2nue6bal2xcil852796741~  .2vkvisfgyd5eb3202692421~  .2y8qfxfwk1x3r184783947~  .3buneqk6w2ved256849271~  .j5ifh5jk62xx920339173~  .mviovs21uy1x1543232321~  .odf2vsi434ly4010750463~  main.py  pyproject.toml
interpreter/: setup.py
interpreter/.eggs/atomicwrites-1.4.1-py3.10.egg/EGG-INFO/: RECORD
interpreter/GraphicalBF/: myfunctions.py
interpreter/logs/: logs.txt
interpreter/tests/: test_myfunctions.py
